editor-components/call_to_action/call_to_action6/call_to_action6.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  position: relative;

  &::before {
    position: absolute;
    top: 0;
    left: 0;
    background-color: var(--composer-overlay-color);
    content: "";
    height: 100%;
    width: 100%;
    opacity: 0;
    z-index: 1;
  }

  &.overlay-active::before {
    opacity: 1;
  }

  .background-image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: 0;
  }

  .max-content {
    position: relative;
    z-index: 1;
    height: 100%;
    width: 100%;
    padding: calc(var(--composer-gap-xl) * 2);
    z-index: 2;

    &::before {
      top: 0px;
      left: 0px;
      content: "";
      position: absolute;
      width: 100%;
      height: 100%;
      background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
      opacity: 0.5;
      z-index: -1;
      border-radius: var(--composer-border-radius-md);
    }

    &.no-image {
      .content {
        .subtitle, .title, .description {
          color: var(--composer-font-color-primary);
        }
        .form {
          .bottom-container {
            .comment {
              color: var(--composer-font-color-primary);
            }
          }
        }
      }
    }

    .content {
      align-items: center;

      .subtitle {
        content: "";
        text-align: center;
        transform: translateX(0);
        color: white;
        &::before {
          display: none;
        }

        &.with-image {
          padding: 0;
          border-radius: 0;
          background: transparent;
        }
      }

      .title, .description {
        text-align: center;
        width: 100%;
        color: white;
      }

      .space-container {
        display: flex;
        width: 100%;
        justify-content: center;

        .space {
          content: "";
          height: 1px;
          background-color: rgb(var(--composer-font-color-primary-rgb), 0.2);
          width: 15%;
        }
      }

      .placeholder {
        min-width: 500px;
        color: var(--composer-html-background);
        width: 30%;
        padding: var(--composer-gap-md);
        border-radius: var(--composer-border-radius-sm);
        border: 1px solid var(--composer-font-color-primary);
        background-color: var(--composer-font-color-primary);
        outline: none;

        &::placeholder {
          color: var(--composer-html-background);
        }
      }

      .form {
        display: flex;
        flex-direction: column;
        gap: var(--composer-gap-md);
        width: 100%;
        align-items: center;

        .input-container {
          position: relative;

          .input {
            content: "";
          }

          .error {
            position: absolute;
            bottom: -20px;
            left: 0;
            color: var(--warning);
          }
        }

        .bottom-container {
          display: flex;
          flex-direction: column;
          gap: var(--composer-gap-sm);
          align-items: center;

          .comment {
            color: white;
            text-align: center;
          }

          .button-container {
            display: flex;
            gap: var(--composer-gap-sm);
            flex-wrap: wrap;
            justify-content: center;

            .button {
              content: "";
              .button-text {
                content: "";
              }
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .content {
        .space-container {
          .space {
            width: 50%;
          }
        }

        .placeholder {
          width: 75%;
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      padding: var(--composer-gap-md);

      .content {
        .space-container {
          .space {
            width: 100%;
          }
        }

        .form {
          .input-container {
            width: 100%;
          }
        }

        .placeholder {
          min-width: auto;
          width: 100%;
        }
      }
    }
  }
}

